Code aufräumen
- Unnötige Kommentare entfernt (Automatisch generiertes von NetBeans)
- Unnötige imports entfernt
- PhysikGameObject, ChemieGameObject und PhysikLevelScene von IntelliJ formatieren lassen
- IntelliJ mal drüberschauen lassen: Sachen, wenn möglich, als `final` deklarieren, einige unnötige Methoden und return-Werte entfernt, Javadoc-Formatierung behoben